--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
             <div class="header-text">
                 <h1 class="homepage-heading homepage-header" style="font-size: 3.5rem;">ECO TECH QUEST</h1>
-                <h2 class="homepage-heading homepage-para" style="font-size: 2.5rem;"">PAVING THE PATH TO A GREENER TOMORROW</h2>
+                <h2 class="homepage-heading homepage-para" style="font-size: 2.5rem;">PAVING THE PATH TO A GREENER TOMORROW</h2>
             </div>
 
             <div class="btn-div">
-                <button class="start-btn">START QUIZ</button>
+                <a href="#quiz" class="start-btn">START QUIZ</a>
             </div>
         </div>
         
@@ -24,5 +24,26 @@
             <p>"Grow Greener, Sustain Stronger."</p>
         </div>
     </section>
+
+    <section id="quiz">
+        <div class="quiz-container">
+
+            <div class="questions-container">
+                <h2 class="quiz-quiz-heading" id="question"></h2>
+            </div>
+
+            <div class="option-container">
+                <button class="option1 options" data-opt="a">a) </button>
+                <button class="option2 options" data-opt="b">b) </button>
+                <button class="option3 options" data-opt="c">c) </button>
+            </div>
+        </div>
+
+        <div class="tip">
+            <p>TIP</p>
+        </div>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="index.js"></script>
 </body>
 </html>
