Add interactive JS functionality

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     </section>
 
     <section id="quiz">
+        <div class="score-div">
+            <h1 id="score"></h1>
+        </div>
         <div class="quiz-container">
 
             <div class="questions-container">
@@ -37,10 +40,14 @@
                 <button class="option2 options" data-opt="b">b) </button>
                 <button class="option3 options" data-opt="c">c) </button>
             </div>
+
+            <div class="question-navigation">
+                <button id="next-btn">Next</button>
+            </div>
         </div>
 
-        <div class="tip">
-            <p>TIP</p>
+        <div class="tip-div">
+            <p id="tip"></p>
         </div>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
